--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -1,6 +1,6 @@
-<div x-data="{changed:false,settings:[]}" @change="changed=true" x-init="fetch('http://192.168.0.233/settings').then(r=>r.json()).then(r=>settings = r)">
+<div x-data="{changed:false,settings:[]}" @change="changed=true" x-init="fetch(IP+'/settings').then(r=>r.json()).then(r=>settings = r)">
 <template x-if="device"
-            x-data="{device:null, now: new Date(),getDevice:() => fetch('http://192.168.0.233/device').then(r=>r.json())}" 
+            x-data="{device:null, now: new Date(),getDevice:() => fetch(IP+'/device').then(r=>r.json())}" 
             x-init="getDevice().then(r=>device = r);setInterval(() => getDevice().then(r=>device = r).then(() => now = new Date()), 15000)">
     <div class="text-xl flex sticky font-bold top-0 bg-(--primary-foreground) border-b border-gray-200 z-10 gap-4 p-4">
         <div class="grow inline-flex items-center gap-4">
@@ -13,8 +13,8 @@
                 <span x-text="Math.round(device.humidity * 10) / 10"></span>
                 <span> %</span> 
             </div>
-            <template x-if="status?.power>1" x-data="{status:null}" x-init="setInterval(() => fetch('http://192.168.0.233/energy').then(r=>r && r.json()).then(r=>status = r), 5000)">
-                <div data-tooltip="Kazán ég" data-placement="bottom" class="border-none! text-red-400">
+            <template x-if="status?.power>1" x-data="{status:null}" x-init="setInterval(() => fetch(IP+'/energy').then(r=>r && r.json()).then(r=>status = r), 5000)">
+                <div :data-tooltip="'Kazán ég fogyasztás: '+Math.round(status.power)+' W'" data-placement="bottom" class="border-none! text-red-400">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-flame-icon lucide-flame size-8"><path d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"/></svg>
                 </div>
             </template>
@@ -39,7 +39,7 @@
        x-init="fetch('https://api.weatherapi.com/v1/forecast.json?key=63862b95a21d4fb7b36211412250412&q=Budapest&days=2&aqi=no&alerts=no').then(r=>r.json()).then(r=>forecast = r.forecast.forecastday).then(console.log)" class="w-full striped">
     <template x-for="(row,n) in settings" :key="n">
         <tr  
-        x-init="$el.scrollIntoView(true)" 
+        x-init="n===now && $el.scrollIntoView(true)" 
         :data-now="n === now||null"
         class="odd:bg-stone-100 hover:bg-stone-200 data-now:bg-amber-100">
             <td x-text="n+':00-'+n+':59'"></td>
@@ -79,7 +79,7 @@
 <template x-if="changed">
     <div class="sticky bottom-0 left-0 bg-red-500 border-t border-gray-200 z-10 p-4 flex items-center">
         <div class="grow text-xl font-bold text-white">Változások mentése.</div>
-        <button @click="changed=false;fetch('http://192.168.0.233/upload?file=settings.json',{method:'POST',body:JSON.stringify(settings)})">Mentés</button>
+        <button @click="changed=false;fetch(IP+'/upload?file=settings.json',{method:'POST',body:JSON.stringify(settings)})">Mentés</button>
     </div>
 </template>
 </div>
